@@ -46,9 +46,8 @@ import org.slf4j.LoggerFactory;
 
 import static org.apache.solr.cloud.OverseerMessageHandler.ExclusiveMarking.NONEXCLUSIVE;
 import static org.apache.solr.cloud.OverseerMessageHandler.ExclusiveMarking.NOTDETERMINED;
-import static org.apache.solr.common.params.ConfigSetParams.ConfigSetAction.CREATE;
-import static org.apache.solr.common.params.ConfigSetParams.ConfigSetAction.DELETE;
 import static org.apache.solr.common.params.CommonParams.NAME;
+import static org.apache.solr.common.params.ConfigSetParams.ConfigSetAction.CREATE;
 
 /**
  * A {@link OverseerMessageHandler} that handles ConfigSets API related
@@ -349,6 +348,12 @@ public class OverseerConfigSetMessageHandler implements OverseerMessageHandler {
     ZkConfigManager configManager = new ZkConfigManager(zkStateReader.getZkClient());
     if (!configManager.configExists(configSetName)) {
       throw new SolrException(ErrorCode.BAD_REQUEST, "ConfigSet does not exist to delete: " + configSetName);
+    }
+
+    for (String s : zkStateReader.getClusterState().getCollections()) {
+      if (configSetName.equals(zkStateReader.readConfigName(s)))
+        throw new SolrException(ErrorCode.BAD_REQUEST,
+            "Can not delete ConfigSet as it is currently being used by collection [" + s + "]");
     }
 
     String propertyPath = ConfigSetProperties.DEFAULT_FILENAME;
